--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     environment:
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRES_IN: ${JWT_EXPIRES_IN}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       FRONTEND_PORT: ${FRONTEND_PORT}
     ports:
       - "${BACKEND_PORT}:3000"
@@ -13,6 +15,8 @@ services:
     build:
       context: ./frontend
     environment:
+      VITE_GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      VITE_GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       VITE_BACKEND_PORT: ${BACKEND_PORT} # env variables in VITE must start with VITE_
     ports:
       - "${FRONTEND_PORT}:5173"
